deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-pod
  labels: 
    component: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/short-app
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 80
