pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels: 
    app.kubernetes.io/name: first-pod
    component: frontend
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app:1.2
      imagePullPolicy: Always
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
