service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
