service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  type: NodePort
  selector: 
    component: frontend
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31111
